--- a/styles/home.css
+++ b/styles/home.css
@@ -118,6 +118,8 @@
 
 .link-box:hover {
     color: var(--accent-color);
+    border-bottom: none;
+    text-decoration: none;
 }
 
 .link-separator {
